# climatempo

./: .env  .pylintrc  README.md  pyproject.toml
assets/: template.xml
climatempo/: main.py
climatempo/application/: controller.py  types.py
climatempo/application/interfaces/: infra.py  scheduler.py
climatempo/domain/: city.py  map.py  tide_table.py
climatempo/infra/: city.py
climatempo/services/: executor.py  scheduler.py
docker/: Dockerfile  docker-compose.yml
docker/aws/: buckets.sh
docker/volume/cache/: machine.json
